--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,4 @@ AUTHOR_NAME=Hedge Team
 AUTHOR_EMAIL=https://discord.com/invite/qfqegrRWmw
 TAGS=defi,liquidity,borrow
 DESCRIPTION=0% Interest Liquidity on Solana
-GITHUB=https://descartesnetwork.github.io/senhub
+GITHUB=https://descartesnetwork.github.io/hedge-iframe
